Fixing height of the calculator on mobile in landscape mode

--- a/styles.css
+++ b/styles.css
@@ -419,7 +419,7 @@ img {
         width: 350px;
         margin: 0;
 
-        height: calc(100vh - 120px);
+        height: 100vh;
 
         box-sizing: border-box;
     }
